step9: global security config (instead of method level)